--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,30 @@
     <title>Whats Cookin</title>
   </head>
   <body>
-    <h1>Whats Cookin</h1>
+    <header class='all-header-contents'>
+      <section class='main-header'>
+        <h1>What's Cookin', <span class='user-name'>User</span>?</h1>
+      </section>
+      <section class="cookbook-favorite-btns-section">
+        <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
+        <button id='favoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
+      </section>
+      <section class="search-section">
+        <input type="search" class='search-field' placeholder="Search Recipes">
+      </section>
+    </header>
+    <main>
+      <section class='all-recipe-cards'>
+        <article class="card">
+          <img class="recipe-image" src="" alt="">
+          <button type="button" name="button">View More</button>
+          <button type="button" name="button">Cook</button>
+          <button type="button" name="button">Favorites</button>
+          <p class="recipe-name">Recipe Name</p>
+          <section class="details-background">
+          </section>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
