Fix classnames in css stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <body>
     <header class='all-header-contents'>
       <nav class='main-header'>
-        <section>
-          <h1>What's Cookin', <span id="userName" class='user-name'>User</span>?</h1
+        <section id="headerSection" class="header-section">
+          <h1 id="greeting" class="greeting" >What's Cookin', <span id="userName" class='user-name'>User</span>?</h1>
         </section>
         <section id="navBtnsSection" class="nav-btns-section">
           <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
