--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
           <h1 id="greeting" class="greeting" >What's Cookin', <span id="userName" class='user-name'>User</span>?</h1>
         </section>
         <section id="navBtnsSection" class="nav-btns-section">
+          <button id="homeBtn" class="home-btn hidden" type="button" name="button">Home</button>
           <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
           <button id='favoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
         </section>
@@ -23,9 +24,11 @@
       <section id="allRecipeCards" class='all-recipe-cards'>
         <article id="recipeCard" class="recipe-card">
           <img id="recipeImage" class="recipe-image" src="" alt="">
-          <button id="viewMoreViewLessBtn" type="button" name="button">View More</button>
-          <button id="addToCookbookBtn" type="button" name="button">Cook</button>
-          <button id="addToFavoritesBtn" type="button" name="button">Favorites</button>
+          <div class="recipe-card-btn-section">
+            <button id="viewMoreViewLessBtn" type="button" name="button">View More</button>
+            <button id="addToCookbookBtn" type="button" name="button">Cook</button>
+            <button id="addToFavoritesBtn" type="button" name="button">Favorites</button>
+          </div>
           <p id="recipeName" class="recipe-name">Recipe Name</p>
           <section id="detailsBackground" class="details-background">
           </section>
