Add styling to detailsBackground

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
           </div>
           <p id="recipeName" class="recipe-name">Recipe Name</p>
           <section id="detailsBackground" class="details-background">
+            <p id="ingredientsLabel" class="label">Ingredients</p>
+            <p id="ingredients" class="details-text"> - 4, Cups, Strawberries</p>
+            <p id="instructionsLabel" class="label">Instructions</p>
+            <p id="instructions" class="details-text">1. In a large mixing bowl, whisk together the ingredients....</p>
           </section>
         </article>
       </section>
