Add innerAdjacent HTML to display recipe data

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <main>
       <section id="allRecipeCards" class='all-recipe-cards'>
         <article id="recipeCard" class="recipe-card">
-          <img id="recipeImage" class="recipe-image" src="" alt="">
+          <img id="recipeImage" class="recipe-image" src="" alt="Recipe Image">
           <div class="recipe-card-btn-section">
             <button id="viewMoreViewLessBtn" type="button" name="button">View More</button>
             <button id="addToCookbookBtn" type="button" name="button">Cook</button>
