--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <section id="navBtnsSection" class="nav-btns-section">
           <button id="homeBtn" class="home-btn hidden" type="button" name="button">Home</button>
           <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
-          <button id='favoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
+          <button id='viewFavoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
         </section>
         <section class="search-section">
           <input id="searchField" type="search" class='search-field' placeholder="Search Recipes">
