--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <header class='all-header-contents'>
       <nav class='main-header'>
         <section id="headerSection" class="header-section">
-          <h1 id="greeting" class="greeting" >What's Cookin', <span id="userName" class='user-name'>User</span>?</h1>
+          <h1 id="greeting" class="greeting" >What's Cookin', User?</h1>
         </section>
         <section id="navBtnsSection" class="nav-btns-section">
           <button id="homeBtn" class="home-btn hidden" type="button" name="button">Home</button>
