Add favorites view and home view functionality

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
           <h1 id="greeting" class="greeting" >What's Cookin', User?</h1>
         </section>
         <section id="navBtnsSection" class="nav-btns-section">
-          <button id="homeBtn" class="home-btn hidden" type="button" name="button">Home</button>
+          <button id="homeBtn" class="home-btn" type="button" name="button">Home</button>
           <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
           <button id='viewFavoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
         </section>
