--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         </section>
         <section id="navBtnsSection" class="nav-btns-section">
           <button id="homeBtn" class="home-btn" type="button" name="button">Home</button>
-          <button id='cookbookBtn' class='home-cookbook-btn'>Cookbook</button>
+          <button id='cookbookBtn' class='cookbook-btn'>Cookbook</button>
           <button id='viewFavoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
         </section>
         <section class="search-section">
