--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@
           </div>
           <p id="recipeName" class="recipe-name">Recipe Name</p>
           <section id="detailsBackground" class="details-background">
-            <p id="ingredientsLabel" class="label">Ingredients</p>
+            <!-- <p id="ingredientsLabel" class="label">Ingredients</p>
             <p id="ingredients" class="details-text"></p>
             <p id="instructionsLabel" class="label">instructions</p>
-            <p id="instructions" class="details-text"></p>
+            <p id="instructions" class="details-text"></p> -->
           </section>
         </article>
       </section>
