--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
           <button id='cookbookBtn' class='cookbook-btn'>Cookbook</button>
           <button id='viewFavoriteRecipesBtn' class='favorite-recipes-btn'>Favorites</button>
         </section>
-        <section class="search-section">
+        <section id="searchSection" class="search-section">
           <input id="searchField" type="search" class='search-field' placeholder="Search Recipes">
         </section>
       </nav>
