Change View More button and add background to recipe card

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
     <main>
       <section id="allRecipeCards" class='all-recipe-cards'>
         <article id="recipeCard" class="recipe-card">
-          <img id="recipeImage" class="recipe-image" src="" alt="Recipe Image">
+          <!-- <img id="recipeImage" class="recipe-image" src="" alt="Recipe Image">
           <div class="recipe-card-btn-section">
-            <button id="viewMoreViewLessBtn" type="button" name="button">View More</button>
+            <button id="detailsBtn" type="button" name="button">Details</button>
             <button id="addToCookbookBtn" type="button" name="button">Cook</button>
             <button id="addToFavoritesBtn" type="button" name="button">Favorites</button>
           </div>
-          <p id="recipeName" class="recipe-name">Recipe Name</p>
+          <p id="recipeName" class="recipe-name">Recipe Name</p> -->
         </article>
       </section>
     </main>
